# Exemple-CMake

./: CMakeLists-googletest.txt  CMakeLists.txt  CTestConfig.cmake  README.md
include/lib_mini_banque/: Portefeuille.h
src/lib_mini_banque/: Portefeuille.cpp
tests/: PortefeuilleTests.cpp
